syntax = "proto3";

package api.link.v1;

import "google/api/annotations.proto";

option go_package = "link_service/api/link/v1;v1";
option java_multiple_files = true;
option java_package = "api.link.v1";
option java_outer_classname = "LinkProtoV1";

service ShortLink {
	rpc GenerateShortLink (GenerateShortLinkRequest) returns (GenerateShortLinkReply) {
		option (google.api.http) = {
			post: "/link/short/generate"
			body: "url"
		};
	};
}

message GenerateShortLinkRequest {
	string url = 1;
}
message GenerateShortLinkReply {
	string url = 1;
}